# logicore-django-react

./: Makefile  pyproject.toml
src/logicore_django_react/: context_processors.py  urls.py  views.py
src/logicore_django_react/templatetags/: react_tags.py  react_tags_dev.py
