[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logicore-django-react"
version = "1.0.0.dev9"
authors = [
  { name="Andrei Boltachev", email="andrewboltachev@gmail.com" },
]
description = "A little Python module helping to use Django and React on a single port during development and production"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'Django < 5',
  'django-proxy == 1.2.1',
]
include = [
  "src/logicore_django_react/templates/logicore_django_react/home.html",
  "src/logicore_django_react/templates/logicore_django_react/include_react_css.html",
  "src/logicore_django_react/templates/logicore_django_react/include_react_js.html",
]

[project.urls]
"Homepage" = "https://github.com/Logicore-project/logicore-django-react"
"Bug Tracker" = "https://github.com/Logicore-project/logicore-django-react/issues"
